--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,5 @@
-.App-logo {
-    height: 40px;
-    width: 40px;
-    pointer-events: none;
-    justify-items: center;
-    margin-top: 50%;
-    border-radius: 0%;
-    overflow: hidden;
-    animation: go-back 2s infinite;
-  }
-  
-  @keyframes go-back {
-    from {
-      transform: translateX(30px);
-    }
-    to {
-      transform: translateX(0);
-    }
-  }
-body {
-    background-color: rgba(86, 14, 158, 0.726);
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    transform: scale(5);
-}  
+body{
+  margin: 0;
+  font-family: sans-serif;
+  background-color: #eee;
+}
