--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,28 @@
 body{
   margin: 0;
   font-family: sans-serif;
-  background-color: #eee;
-}
+  background-color: white;
+  height: auto !important;
+   max-width: 100% !important;
+  width: auto !important;
+  display: block !important;
+  }
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #883875 #eee;
+  }
+  
+  /* Works on Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: #eee;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #883875;
+    border-radius: 20px;
+    border: 3px solid #eee;
+  }
